# pcds-ci-test-repo-python

./: .coveragerc  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  CODEOWNERS  CONTRIBUTING.rst  README.rst  dev-requirements.txt  docs-requirements.txt  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: standard.yml
conda-recipe/: meta.yaml
docs/source/: conf.py  index.rst
project_name/: dummy.pyi  version.py
project_name/tests/: conftest.py  test_blank.py
