[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=45",
    "setuptools_scm[toml]>=6.2"
]

[project]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
]

description = "A short description of the project."
dynamic = [ "version", "readme", "dependencies", "optional-dependencies",]
keywords = []
name = "project-name"
requires-python = ">=3.9"

[options]
zip_safe = false
include_package_data = true

[tool.setuptools.packages.find]
where = [ ".",]
include = [ "project_name*",]
namespaces = false

[[project.authors]]
name = "SLAC National Accelerator Laboratory"

[project.license]
file = "LICENSE"

[project.scripts]
"project-name" = "project_name.bin.main:main"

[tool.setuptools_scm]
write_to = "project_name/_version.py"

[tool.setuptools.dynamic.readme]
file = "README.rst"

[tool.setuptools.dynamic.dependencies]
file = [ "requirements.txt",]

[tool.setuptools.dynamic.optional-dependencies.test]
file = "dev-requirements.txt"
